# search_names

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Citation.cff  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  readme.md  requirements.txt  search_names.example.yaml  setup.py
.github/workflows/: ci.yml  docs.yml  python-publish.yml  test.yml
clean_names/: names.py  process_names.py  readme.md  requirements.txt
docs/: Makefile  PERFORMANCE.md  make.bat
docs/source/: conf.py  index.rst  search_names.rst
examples/: README.md
examples/configuration/: README.md
examples/enhanced_name_parsing/: README.md  enhanced_name_parsing_demo.py  sample_political_names.csv
examples/integration_workflows/: README.md  complete_workflow_demo.py
examples/merge_supp_data/: 02_merge_supp_data_prefixes.csv  augmented_clean_names.csv  nick_names.txt
examples/modern_cli/: README.md  cli_demo.py  sample_config.yaml
examples/nlp_features/: README.md  nlp_demo.py
examples/preprocess/: augmented_clean_names.csv
examples/search/: search_cols.txt
merge_supp_data/: augmented_clean_names.csv  merge_supp.py  nick_names.txt  readme.md
preprocess/: deduped_augmented_clean_names.csv  drop_patterns.txt  preprocess.py  readme.md
search/: input_file_cols.txt  merge_results.py  preprocess.py  readme.md  requirements.txt  search_names.cfg  search_names.py  searchengines.py  split_text_corpus.py
search-names/: merge_results.py  names.py  process_names.py  search.md  search_names.cfg  searchengines.py  split_text_corpus.py
search_names/: __init__.py  clean_names.py  cli.py  config.py  engines.py  enhanced_name_parser.py  file_formats.py  logging_config.py  merge_results.py  merge_supp.py  models.py  nlp_engine.py  optimized_searchengines.py  preprocess.cfg  preprocess.py  process_names.py  search_names.cfg  search_names.py  searchengines.py  split_text_corpus.py  streaming_utils.py  utils.py
search_names/pipeline/: __init__.py  optimized_search.py  step1_clean.py  step2_augment.py  step3_preprocess.py  step4_search.py
search_names/tests/: test_010_clean_names.py  test_020_merge_supp.py  test_030_preprocess.py  test_040_search.py
tests/: conftest.py  test_010_clean_names.py  test_020_merge_supp.py  test_030_preprocess.py  test_040_search.py  test_050_logging_config.py  test_060_config.py  test_070_models.py  test_080_file_formats.py  test_090_nlp_engine.py  test_100_enhanced_name_parser.py  test_110_cli.py  test_optimized_search.py
