[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search_names"
version = "0.4.0"
description = "Advanced name search and entity recognition in large text corpora with NLP and AI capabilities"
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = ["search", "names", "text", "corpus", "pattern", "ner", "nlp", "entity-recognition", "entity-linking", "fuzzy-matching"]
dependencies = [
    "nameparser",
    "python-Levenshtein",
    "regex",
    "nltk",
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "parsernaam>=0.2.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["ruff", "black", "isort"]
test = ["coverage", "pytest", "pytest-asyncio"]
docs = ["sphinx", "furo"]
nlp = [
    "transformers>=4.21.0",  # Additional transformers for advanced NLP
]
ml = [
    # Core ML features now included in main dependencies
]
formats = [
    "pyarrow>=10.0.0",  # For users who need Parquet support
    "polars>=0.19.0",   # For users who need Polars DataFrame library
]
search = [
    "elasticsearch>=8.0.0",
    "opensearch-py>=2.0.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
all = [
    "search_names[nlp,ml,formats,search,web]"
]

[project.urls]
Homepage = "https://github.com/appeler/search-names"
Repository = "https://github.com/appeler/search-names"
Issues = "https://github.com/appeler/search-names/issues"

[project.scripts]
# Modern CLI - unified interface for the complete pipeline
search-names = "search_names.cli:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["search_names"]

[tool.hatch.build.targets.wheel.shared-data]
"examples" = "share/search_names/examples"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

