[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search_names"
version = "0.4.0"
description = "Advanced name search and entity recognition in large text corpora with NLP and AI capabilities"
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = ["search", "names", "text", "corpus", "pattern", "ner", "nlp", "entity-recognition", "entity-linking", "fuzzy-matching"]
dependencies = [
    "nameparser>=1.1.0",
    "python-Levenshtein>=0.27.0",
    "regex>=2024.0.0",
    "nltk>=3.9.0",
    "typer>=0.20.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0",
    "rich>=14.0.0",
    "pandas>=2.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.7.0",
    "parsernaam>=0.1.0",
    "spacy>=3.8.0",
    "sentence-transformers>=5.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.14.0", "pre-commit>=4.0.0"]
test = ["coverage>=7.12.0", "pytest>=9.0.0", "pytest-asyncio>=1.3.0", "pytest-timeout>=2.3.1"]
docs = ["sphinx>=8.0.0", "furo>=2025.9.0"]
nlp = [
    "transformers>=4.57.0",  # Latest transformers for advanced NLP
    "torch>=2.9.0",          # Latest PyTorch
    "huggingface-hub>=0.36.0",
]
ml = [
    # Core ML features now included in main dependencies
    "scipy>=1.16.0",
    "joblib>=1.5.0",
]
formats = [
    "pyarrow>=22.0.0",  # Latest Parquet support
    "polars>=1.35.0",   # Latest Polars DataFrame library
]
search = [
    "elasticsearch>=9.0.0",
    "opensearch-py>=3.0.0",
]
web = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.38.0",
]
all = [
    "search_names[nlp,ml,formats,search,web]"
]

[project.urls]
Homepage = "https://github.com/appeler/search-names"
Repository = "https://github.com/appeler/search-names"
Issues = "https://github.com/appeler/search-names/issues"

[project.scripts]
# Modern CLI - unified interface for the complete pipeline
search-names = "search_names.cli:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["search_names"]

[tool.hatch.build.targets.wheel.shared-data]
"examples" = "share/search_names/examples"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
timeout = 300
addopts = "--timeout=300 --tb=short"
filterwarnings = [
    # Suppress sklearn pickle version warnings from parsernaam
    "ignore:.*Trying to unpickle estimator.*:sklearn.base.InconsistentVersionWarning",
    # Other common warnings we want to suppress
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # Suppress pytest config warnings
    "ignore::pytest.PytestConfigWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

# Black and isort configurations removed - using ruff for all formatting

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
nlp = [
    "spacy[en-core-web-sm]>=3.8.11",
]
